# slouch

./: Cargo.toml  LICENSE  README.md  TODO.md
src/: client.rs  error.rs  helper.rs  lib.rs  token.rs  trade.rs
src/client/: token_generator.rs  token_prefix.rs
src/msg/: in.rs  mod.rs  options.rs  out.rs  request.rs  response.rs
src/msg/in/: accepted.rs  broken.rs  canceled.rs  event.rs  executed.rs  rejected.rs
src/msg/options/: appendage.rs  mod.rs  tag.rs  tag_value.rs  value.rs
src/msg/request/: cancel.rs  enter.rs  modify.rs  permission.rs  query.rs  replace.rs
src/msg/response/: accepted.rs  broken.rs  canceled.rs  event.rs  executed.rs  modified.rs  permission.rs  query.rs  rejected.rs  replaced.rs  updated.rs
src/test/: helper.rs  mod.rs  options.rs  types.rs
src/test/options/: mod.rs  request.rs  response.rs
src/test/request/: cancel.rs  enter.rs  mod.rs  modify.rs  permission.rs  query.rs  replace.rs
src/test/response/: accepted.rs  broken.rs  canceled.rs  event.rs  executed.rs  mod.rs  modified.rs  permission.rs  query.rs  rejected.rs  replaced.rs  updated.rs
src/types/: aiq_strategy.rs  bbo_weight.rs  bbo_weight_indicator.rs  broken_reason.rs  broker_id.rs  cancel_reason.rs  capacity.rs  cross_type.rs  customer_type.rs  display.rs  elapsed_time.rs  enums.rs  event_code.rs  firm_id.rs  handle_inst.rs  liquidity_flag.rs  mod.rs  order_state.rs  order_token.rs  price.rs  price_type.rs  reject_reason.rs  restate_reason.rs  route_id.rs  side.rs  signed_price.rs  stock_symbol.rs  time_in_force.rs  trade_now.rs  user_ref_num.rs
test/: README.md
