
[package]
name = "slouch"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["std"] }
derive_more = { version = "0.99.17", default-features = false, features = ["deref", "deref_mut"] }
serde = { version = "1.0.219", features = [ "derive" ]}
thiserror = "2.0.12"

