
[package]
name = "slouch"
authors = ["j-stach"]
version = "0.0.2"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/j-stach/slouch"
description = "Simple OUCH 5.0 client & message types for order entry."
keywords = ["ouch", "nasdaq", "trading", "finance"]
categories = ["network-programming", "finance"]

exclude = [".git/**", "docs/**", "test/**", "src/test/**", "TODO.md"]

[dependencies]
nsdq-util = "0.1.2"
nom = "8.0.0"
thiserror = "2.0.12"

# Feature-specific dependencies:
tokio = { version = "1.28.2", features = ["sync", "net", "time", "io-util"], optional = true }
log = { version = "0.4.28", optional = true }

[features]
logs = ["log"]
async = ["tokio"]

